# Casino-V3

./: .flake8  .gitignore  .param_override_ltc.json  .pre-commit-config.yaml  =3.0  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  absolute_raw_output.txt  all_exchange_data.json  all_exchange_orders.json  analyze_errors.py  audit_report.txt  audit_results.txt  backtest-protocol.md  backtest.py  baseline_data.md  baseline_full_summary.txt  baseline_summary.txt  benchmark_norm.py  changelog.md  check_historian.py  clean_exchange.py  debug_reduce_only.py  debug_ws.py  diagnostic_exchange.py  error_analysis_report.txt  experimental_details.txt  experimental_full_summary.txt  experimental_summary.txt  final_audit.py  force_close_testnet.py  inspect_order.py  main.py  memory.md  parse_sensors.py  positions.txt  (+33 more)
.agent/: ABSORPTION_V1_ARCHITECTURE_ANALYSIS.md  ABSORPTION_V1_EDGE_VALIDATION_PLAN.md  ABSORPTION_V1_IMPLEMENTATION_PLAN.md  DEEP_STRATEGY_ANALYSIS.md  EDGE_AUDITOR_IMPROVEMENTS.md  EXECUTIVE_SUMMARY.md  FAST_TRACK_ABSORPTION_ANALYSIS.md  FLAGS_REVIEW_ABSORPTION_V1.md  LONG_RANGE_AUDIT_RESULTS_2024.md  PHASE_2100_REGIME_SENSOR.md  PHASE_2400_CHANGES.md  PHASE_2400_VALIDATION_RESULTS.md  PHASE_800B_SUMMARY.md  SESSION_SUMMARY_2026-04-26.md  STRATEGY_COMPARISON_ANALYSIS.md  VALIDATION_UPDATES_ABSORPTION_V1.md  architecture_map.md  backtesting_config.md  changelog.md  memory.md  parameter_analysis.md  perfil_changelog.md  session-close.md
.github/: copilot-instructions.md
config/: __init__.py  absorption.py  clusters.json  clusters_fixed.json  coin_profiles.py  coin_profiles_AVAX_NOISY_UNCERTAIN_optimized.py  coin_profiles_LTC_NOISY_UNCERTAIN_1_optimized.py  coin_profiles_LTC_test.py  coin_profiles_SOL_INERTIAL_TRENDING_optimized.py  coin_profiles_THIN_VOLATILE_optimized.py  exchange.py  firmas.json  markov_btc.json  markov_transition.json  optimized_params_LTC_30d_experiment.json  optimized_params_multitf.txt  sensor_metadata.py  sensors.py  strategies.py  strategies.py.bak  strategy.py  system.py  trading.py  trading.py.bak
core/: __init__.py  backtest_feed.py  bar_aggregator.py  cache.py  candle_maker.py  clock.py  coin_profiler.py  config.py  context_registry.py  engine.py  events.py  exceptions.py  execution.py  execution_process.py  (+14 more)
(+645 files in other folders)
